--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,52 @@ section#blog article figure .fecha p{
 }
 
 /* Final Blog */
+/* Inicio Menu */
 
+.fondo{
+    background-color: var(--colorSecundario);
+    min-height: 100vh;
+}
+#menu :is(h2 , h3 , p , a){
+    color: white;
+}
+#menu a{
+    text-decoration: none;
+}
+#menu h3{
+    font-size: 120%;
+    font-weight: 700;
+    margin-bottom: var(--marginGrid);
+}
+#menu .offers h3::after{
+    content: "";
+    margin-top: var(--marginGrid);
+    display: block;
+    width: 50px;
+    border-top: 1px solid var(--colorPrincipal);
+}
+#menu p{
+    line-height: 1.5em;
+    font-size: 90%;
+}
+#menu .wrapper{
+    padding: 0 var(--marginGrid) ;
+}
+#menu nav a{
+    display: block;
+    margin: var(--marginGrid) 0;
+    padding: var(--marginGrid);
+    font-size: 90%;
+}
+#menu nav a.activo{
+    background-color: var(--colorPrincipal);
+    border-radius: 5px;
+}
+#menu .wrapper{
+    display: flex;
+    flex-direction: row;
+}
+/* Final Menu */
 /* mediaquerys */
 
 
