--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,8 @@ section#blog article figure .fecha{
     top: 0;
     left: 0;
     background-color: #fa573ac0;
-    width: 110px;
+    width: 30%;
+    min-width: 80px;
     text-align: center;
     padding-top: var(--marginGrid);
 }
@@ -372,9 +373,10 @@ section#blog article figure .fecha p{
     padding: var(--marginGrid);
     font-size: 90%;
 }
-#menu nav a.activo{
+#menu nav :is(.activo, a:hover){
     background-color: var(--colorPrincipal);
     border-radius: 5px;
+    transition: 1s;
 }
 /* #endregion */
 /* #region team */
@@ -389,20 +391,31 @@ section#blog article figure .fecha p{
     position: relative;
 }
 #team article figure .person{
+    transition: 1s;
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 150px;
     text-align: center;
     background-color: #00000080;
+    overflow: hidden;
 }
-#team article figure .person :is(h3 , p){
+#team article figure .person :is(h3 , p , ul.redesSociales, ul.redesSociales li){
     color: white;
     margin: 0 auto;
-}#team article figure .person h3{
+    transition: 1s;
+}
+#team article figure .person h3{
     padding-top: var(--marginGrid);
+    position: absolute;
+    top: 10px;
+    width: 100%;
 }
 #team article figure .person p{
     padding-bottom: var(--marginGrid);
+    position: absolute;
+    width: 100%;
+    top: 80px;
 }
 #team article figure .person h3:after{
     content: "";
@@ -410,6 +423,38 @@ section#blog article figure .fecha p{
     border-bottom: 2px solid var(--colorPrincipal);
     margin: var(--marginGrid) auto;
     display: block;
+}
+#team article figure .person ul.redesSociales{
+    position: absolute;
+    top: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+#team article figure .person ul.redesSociales li{
+    padding: calc(var(--marginGrid) /2);
+    margin: 0 calc(var(--marginGrid) /2);
+    min-width: 50px;
+    min-height: 50px;
+    font-size: 1.5em;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+#team article figure .person ul.redesSociales li a{
+    color: white;
+}
+#team article figure:hover .person{
+    height: 100%;
+}
+#team article figure:hover .person h3{
+    top: 120px;
+}
+#team article figure:hover .person ul.redesSociales{
+    top: 250px;
+}
+#team article figure:hover .person p{
+    top: 200px;
 }
 /* #endregion */
 /* #region aboutUs*/
